<resources>
    <string name="app_name">M-Universe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="clear">CLEAR</string>
    <string name="password">Password</string>
    <string name="marwadi_email_id">Marwadi Email ID</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_to_muniverse_create_an_account">New to MUniverse? Create an Account.</string>
    <string name="register">REGISTER</string>
    <string name="gr_number">GR Number</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="yourusername">YourUsername</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="post">Post</string>
    <string name="posts">Self-reflection is the process of introspectively examining one\'s thoughts, feelings, and experiences. It allows for personal growth, increased self-awareness, and the opportunity to learn from past mistakes. Regular self-reflection can lead to better decision-making.</string>
    <string name="post2">This is the Marwadi University\'s main building, a remarkable architectural masterpiece that stands tall at the heart of our campus. It\'s not just a building; it\'s a symbol of knowledge, innovation, and excellence. </string>
</resources>